# langgraph-platform

./: .env.example  .gitignore  README.md  pyproject.toml  test_optimize_workflow.py  test_r13_validation.py
api/: __init__.py  app.py
checkpoints/: fallback.sqlite-shm
cli/: __init__.py  main.py
config/: experiment.yaml  hosted.yaml
docs/: README.md  configuration.md  optimize-evaluate-pattern.md
examples/: test_ollama_workflow.py  test_optimize_workflow.py  test_postgres_workflow.py  witness_checkpoint_creation.py
flow-pressure/: 01-the-project.md  03-implementation-plan.md  04-current-state.md
general_manager/: __init__.py  config.py  factory.py  llm_providers.py  manager.py  tool_registry.py
lgp/: __init__.py
playground/: ask.py  mcp-integration-notes.md  repl.py  run_manager.py  test_claude_code_provider.py
research/: R15_CLAUDE_CODE_INTEGRATION_ARCHITECTURE.md  R15_IMPLEMENTATION_CHECKLIST.md  R15_INTEGRATION_DIAGRAM.md  R15_README.md
runtime/: __init__.py  executor.py  hot_reload.py  server.py
sacred-core-channels-based/: 01-the-project.md  02-the-discipline.md  03-templates.md  04-current-state.md  05-implementation-plan.md  README.md
sacred-core-claude-cli/: 01-the-project.md  02-the-discipline.md  03-implementation.md  04-current-state.md  README.md
sacred-core-complete-worker/: 01-the-project.md  02-the-discipline.md  04-current-state.md  05-implementation-plan.md  README.md
sacred-core-general-manager/: 01-the-project.md  02-the-discipline.md  03-implementation-plan.md  README.md
scripts/: cleanup_supabase_test_data.py  (+3 more)
(+140 files in other folders)
